# Nmap Changelog ($Id$); -*-text-*-

o Increased portability of configure scripts on systems using a libc
  other than Glibc. Several problems were reported by John Spencer.

o [NSE] Fixed a bug in rpc-grind.nse that would cause unresponsive UDP
  ports to be wrongly marked open. This was reported by Christopher
  Clements. [David Fifield]

o [Ncat] Close connection endpoint when receiving EOF on stdin. [Michal Hlavinka].

o Fixed interface listing on NetBSD. The bug was first noticed by
  Fredrik Pettai and diagnosed by Jan Schaumann. [David Fifield]

o [Ncat] Applied a blocking-socket workaround for a bug that could
  prevent some sends from working in listen mode. The problem was
  reported by Jonas Wielicki. [Alex Weber, David Fifield]

o Protocol scan (-sO) probes for TCP, UDP, and SCTP now go to ports
  80, 40125, and 80 respectively, instead of being randomly generated
  or going to the same port as the source port. [David Fifield]

o [NSE] Added msrpc-enum script which queries MSRPC endpoint mapper for 
  available services and their information. [Aleksandar Nikolic]

o Made source port numbers (used to encode probe metadata) increment
  so as not to overlap between different scanning phases. Previously
  it was possible for an RST response to an ACK probe from host
  discovery to be misinterpreted as a reply to a SYN probe from port
  scanning. [Sean Rivera, David Fifield]

o [NSE] Updated mssql.lua library to support additional data types, enhanced
  some of the existing data types, added the DoneProc response token, and
	reordered code for maintainability. [Tom Sellers]

o [NSE] Added http-slowloris-check script which checks if the server is vulnerable
  to a Slowloris DoS attack in a safe way. [Aleksandar Nikolic]

o Removed pos_scan scan engine as the old implementation of RPC grind was the
  last scan type to use it. [Hani Benhabiles] 

o [NSE] Replaced old rpc grind implementation with a new NSE based implementation